Corrected alignment in publi

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -306,7 +306,7 @@ ul.timeline li .tldata .tlcontent {
     background-color: rgb(249, 129, 42);
 }
 
-.tl-red-border {
+.tl-orange-border {
     background-color: rgb(249, 129, 42);
 }
 
@@ -341,7 +341,7 @@ article-title {
 
 
 /* .article-date {
-    /* font-size: 13px; 
+    /* font-size: 13px;
 } */
 
 .reference {
@@ -368,6 +368,7 @@ article-title {
     background-color: #f5f5f5;
     /* margin: 20px 0px; */
     margin-bottom: 10px;
+    text-align: inherit;
 }
 
 .pub-contents {
